--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "4.6",
     "firebase": "^9.22.0",
     "ngx-toastr": "^16.2.0",
